--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="column" style="margin-top: 3em">
         <h2><i class="fa fa-user-o side" aria-hidden="true"></i>Where you can find me</h2>
         <h2 class="contact-spans">
-          <a href="https://github.com/jibreil"><i class="fa fa-github" aria-hidden="true"></i></a><a href="https://reddit.com/u/kingk22"><i class="fa fa-reddit" aria-hidden="true"></i></a><a href="mailto:jibreil.xyz@respectmyprivacy.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+          <a href="https://github.com/jibreil"><i class="fa fa-github" aria-hidden="true"></i></a><a href="https://reddit.com/u/kingk22"><i class="fa fa-reddit" aria-hidden="true"></i></a><a href="mailto:kingk22.xyz@respectmyprivacy.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
         </h2>
       </div>
     </div>
