--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Jibreil</title>
   <meta name="description" content="My portfolio and general page">
-  <meta name="author" content="Jibreil">
+  <meta name="author" content="Kingk22">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/font-awesome.css">
