--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kingk22</title>
+  <title>Jibreil</title>
   <meta name="description" content="My portfolio and general page">
-  <meta name="author" content="Kingk22">
+  <meta name="author" content="Jibreil">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/font-awesome.css">
@@ -20,7 +20,7 @@
 
     <div class="row eye" id="eye">
       <div class="one-half column" style="margin-top: 25%">
-        <h1><i class="fa fa-space-shuttle side" aria-hidden="true"></i> Kingk22</h1>
+        <h1><i class="fa fa-space-shuttle side" aria-hidden="true"></i> Jibreil</h1>
         <p>kingk22<br> Student and IT hobbyist</p>
       </div>
       <div class="column" style="margin-top: 8em">
