--- a/tada_qmk_guide.html
+++ b/tada_qmk_guide.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/png" href="https://u.teknik.io/UAjLL.png">
 </head>
 
-<body>
+<body style="margin:10%;">
     <h1 id="guide-to-creating-a-layout-in-qmk-for-the-tada68">Guide to creating a layout in QMK for the TADA68</h1>
     <h2 id="step-1-setup-qmk">Step 1: setup QMK</h2>
     <p>Follow the instructions in the <a href="https://docs.qmk.fm/#/newbs_getting_started">QMK docs</a> to setup your QMK environment, by the end of this step you should have all the dependencies installed and a folder with all the QMK stuff.</p>
