--- a/tada_qmk_guide.html
+++ b/tada_qmk_guide.html
@@ -16,7 +16,7 @@
         <li><code>readme.md</code></li>
         <li><code>rules.mk</code></li>
     </ol>
-    <p>Out of those 3, the <code>readme.md</code> file is not required but is present by default, the <code>rules.mk</code> file contains advanced build options for QMK and for most users can be left alone. The <code>keymap.c</code> file is where the magic happens and in here you can edit the default layout to your own liking. Thorough instructions for editing this can also be found in the <a href="https://docs.qmk.fm/#/newbs_building_firmware">QMK docs.</a>.</p>
+    <p>Out of those 3, the <code>readme.md</code> file is not required but is present by default, the <code>rules.mk</code> file contains advanced build options for QMK and for most users can be left alone. The <code>keymap.c</code> file is where the magic happens and in here you can edit the default layout to your own liking. Thorough instructions for editing this can also be found in the <a href="https://docs.qmk.fm/#/newbs_building_firmware">QMK docs.</a></p>
     <h2 id="step-3-build-the-firmware">Step 3: build the firmware</h2>
     <p>The TADA68 is unique to most other mechanical keyboards in terms of putting your own layout on it as you drop a <code>.bin</code> file on the keyboard as if it was a regular mass storage device rather than flashing a <code>.hex</code> file to the controller.</p>
     <p>To generate the <code>.bin</code> file, just run the following command within the QMK root directory:</p>
