--- a/tada/tada_qmk_guide.html
+++ b/tada/tada_qmk_guide.html
@@ -1,7 +1,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>TADA68 QMK Guide</title>
-    <link rel="icon" type="image/png" href="https://u.teknik.io/UAjLL.png">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body style="margin: 10% 20%;">
