--- a/tada/tada_qmk_guide.html
+++ b/tada/tada_qmk_guide.html
@@ -5,7 +5,9 @@
 </head>
 
 <body style="margin: 10% 20%;">
+
     <h1 id="guide-to-creating-a-layout-in-qmk-for-the-tada68">Guide to creating a layout in QMK for the TADA68</h1>
+    <p>The TADA68 can be programmed using <a href="https://github.com/dhowland/EasyAVR">Easy AVR</a> which provides a simple gui and can generate the required <code>.bin</code> file for the TADA68 but it is not as configurable as QMK nor does it have as many features and keycodes as QMK. Because of this, some people may opt to use QMK for their keyboard if Easy AVR does not have functionality that they require and this guide will outline how to do this.</p>
     <h2 id="step-1-setup-qmk">Step 1: setup QMK</h2>
     <h3 id="environment-setup">Environment setup</h3>
     <h4 id="windows">Windows</h4>
