--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <!-- Contact -->
             <article id="contact">
                 <h2 class="major">Contact</h2>
-                <form method="post" action="https://formspree.io/jibreil.xyz@respectmyprivacy.com">
+                <form method="post" action="https://formspree.io/kingk22.xyz@respectmyprivacy.com">
                     <div class="field half first">
                         <label for="name">Name</label>
                         <input type="text" name="name" id="name" />
