--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="assets/css/main.css">
-    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
     <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
@@ -25,13 +24,13 @@
                 <div class="inner">
                     <h1>Jibreil</h1>
                     <p>Kingk22 | Student | IT hobbyist</p>
+                    <p>"Efficiency is clever laziness."</p>
                 </div>
             </div>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#work">Work</a></li>
-                    <!-- <li><a href="#intro">Intro</a></li> -->
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -45,16 +44,16 @@
                 <h2 class="major">about</h2>
                 <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 
-                <p>I'm a student from Australia with a strong interest in all things technology - both hardware and software - and cars. I've done some professional web development but all my other skills have come from and are used as a hobby.</p>
+                <p>I'm a student from Australia with a strong interest in all things technology, both hardware and software, as well as cars. I've done some professional web development but all my other skills have come from and are used as a hobby.</p>
 
                 <p>
                     Some of my skills include:
                     <ul>
                         <li>web development</li>
                         <li>hardware and software troubleshooting and support</li>
-                        <li>experience with various operating systems (windows, osx/macOS and various linux distributions)</li>
+                        <li>experience with various operating systems (Windows, OSX/macOS and various Linux distributions)</li>
                         <li>linux server management</li>
-                        <li>it project management</li>
+                        <li>IT project management</li>
                         <li>information systems and databases</li>
                         <li>communication systems</li>
                         <li>basic knowledge on automated manufacturing systems</li>
@@ -68,32 +67,26 @@
                 <h2 class="major">Work</h2>
                 <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 
-                <h3>Web Development</h3>
+                <h3><a href="https://www.heavenlydelightscatering.com.au/">Heavenly Delights Catering website</a></h3>
+                <p>
+                    I made a fairly simple website for Heavenly Delights Catering and look after most technical aspects of the business. <a href="https://jibreil.xyz/heavenlydelightscateringdev/">Dev site.</a>
+                </p>
 
-                <h4><a href="https://www.heavenlydelightscatering.com.au/">Heavenly Delights Catering</a></h4>
-                <p>I made a fairly simple website for Heavenly Delights Catering and look after most technical aspects of the business. <a href="https://jibreil.xyz/heavenlydelightscateringdev/">Dev site.</a></p>
+                <h3>Ricing (linux desktop art)</h3>
+                <p>
+                    Ricing refers to making visual customizations to a desktop. It comes from the practice of customizing slow cars to appear fast, also known as ricing. My latest rice and information about it can be found on my <a href="https://dotfiles.kingk22.xyz/">dotfiles page.</a>
+                </p>
 
-                <h4><a href="https://jibreil.xyz/site-prev/">Previous personal site</a></h4>
-                <p>Another simple site I made for personal use, my first attempt at a minimalistic site.</p>
+                <h3><a href="https://jibreil.xyz/start-tree/">Start-tree</a></h3>
+                <p>
+                    A browser startpage in a command line tree style with links and a search bar. <a href="https://github.com/jibreil/start-tree">Source.</a>
+                </p>
 
-                <h4><a href="https://jibreil.xyz/start-tree/">Start-tree</a></h4>
-                <p>A browser startpage in a commandline tree style with links and a search bar. <a href="https://github.com/jibreil/start-tree">Source.</a></p>
+                <h3><a href="https://github.com/jibreil/vnstat-alert/">vnStat Alert</a></h3>
+                <p>
+                    A python script to monitor data usage on a system/server, originally made to be used in a business environment, specific actions and/or an email alert can be set up to activate when the specified usage limit is reached.
+                </p>
 
-                <h3>Others</h3>
-
-                <h4><a href="https://github.com/jibreil/vnstat-alert/">vnStat Alert</a></h4>
-                <p>A python script to monitor data usage on a system/server, originally made to be used in a business environment, specific actions and an email alert can be set up to activate when the usage limit is reached.</p>
-
-                <h4>Ricing (linux desktop art)</h4>
-                <p>Ricing is a word that refers to making visual customizations to a desktop. It comes from the practice of customizing slow cars to appear fast, also known as ricing. My latest rice can be seen in <a href="https://imgur.com/gallery/SEFe3">this gallery</a> and the dotfiles (configuration files) can be found <a href="https://github.com/jibreil/dotfiles">here.</a></p>
-
-            </article>
-
-            <!-- Intro -->
-            <article id="intro">
-                <h2 class="major">Intro</h2>
-                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-                <p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
             </article>
 
             <!-- Contact -->
@@ -117,9 +110,7 @@
                         <li><input type="reset" value="Reset" /></li>
                     </ul>
                 </form>
-                <ul class="icons">
-                    <li><a href="https://github.com/jibreil" class="icon fa-github"><span class="label">GitHub</span></a></li>
-                </ul>
+                <a href="https://github.com/jibreil" class="icon fa-3x fa-github"><span class="label">GitHub</span></a>
             </article>
 
         </div>
