big tings and dat

--- a/index.html
+++ b/index.html
@@ -2,134 +2,125 @@
 <html>
 
 <head>
-    <title>Jibreil</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
-    <link rel="icon" type="image/png" href="images/favicon.png">
+	<title>Kingk22</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 
-<body>
+<body class="is-preload">
 
-    <!-- Wrapper -->
-    <div id="wrapper">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-        <!-- Header -->
-        <header id="header">
-            <div class="logo">
-                <span class="icon fa-space-shuttle"></span>
-            </div>
-            <div class="content">
-                <div class="inner">
-                    <h1>Jibreil</h1>
-                    <p>Kingk22 | Student | IT hobbyist</p>
-                    <p>"Efficiency is clever laziness."</p>
-                </div>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+		<!-- Intro -->
+		<section class="intro">
+			<header>
+				<h1>Kingk22</h1>
+				<h3>STUDENT<br>PHOTOGRAPHER<br>IT HOBBYIST</h3>
+				<ul class="actions">
+					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+				</ul>
+			</header>
+			<div class="content">
+				<span class="image fill"><img src="images/fill.jpg" alt="" /></span>
+			</div>
+		</section>
 
-        <!-- Main -->
-        <div id="main">
+		<!-- Section -->
+		<section id="first">
+			<header>
+				<h2>About</h2>
+			</header>
+			<div class="content">
+				<p>I'm a university student from Australia with interests and
+					passions in all sorts of technology, photography and cars.</p>
 
-            <!-- About -->
-            <article id="about">
-                <h2 class="major">about</h2>
-                <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+				<p>I am currently studying a Bachelor of Science in information
+					Technology majoring in networking and cybersecurity.</p>
 
-                <p>I'm a student from Australia with a strong interest in all things technology, both hardware and software, as well as cars. I've done some professional web development but all my other skills have come from and are used as a hobby.</p>
+				<p>I have done some professional web development as well as some
+					other IT portfolio but most of my skills have come from and are used
+					as a hobby.</p>
+			</div>
+		</section>
 
-                <p>
-                    Some of my skills include:
-                    <ul>
-                        <li>web development</li>
-                        <li>hardware and software troubleshooting and support</li>
-                        <li>experience with various operating systems (Windows, OSX/macOS and various Linux distributions)</li>
-                        <li>linux server management</li>
-                        <li>IT project management</li>
-                        <li>information systems and databases</li>
-                        <li>communication systems</li>
-                        <li>basic knowledge on automated manufacturing systems</li>
-                    </ul>
-                </p>
+		<!-- Section -->
+		<section>
+			<header>
+				<h2>Portfolio</h2>
+			</header>
+			<div class="content">
+				<p>Here are some photos I've taken.</p>
+				<div class="gallery">
+					<a href="images/gallery/fulls/01.jpg" class="landscape"><img
+							src="images/gallery/thumbs/01.jpg" /></a>
+					<a href="images/gallery/fulls/02.jpg" class="landscape"><img
+							src="images/gallery/thumbs/02.jpg" /></a>
+					<a href="images/gallery/fulls/03.jpg" class="landscape"><img
+							src="images/gallery/thumbs/03.jpg" /></a>
+					<a href="images/gallery/fulls/04.jpg" class="landscape"><img
+							src="images/gallery/thumbs/04.jpg" /></a>
+					<a href="images/gallery/fulls/05.jpg" class="landscape"><img
+							src="images/gallery/thumbs/05.jpg" /></a>
+					<a href="images/gallery/fulls/06.jpg" class="landscape"><img
+							src="images/gallery/thumbs/06.jpg" /></a>
+					<a href="images/gallery/fulls/07.jpg" class="landscape"><img
+							src="images/gallery/thumbs/07.jpg" /></a>
+					<a href="images/gallery/fulls/08.jpg" class="landscape"><img
+							src="images/gallery/thumbs/08.jpg" /></a>
+				</div>
+			</div>
+		</section>
 
-            </article>
+		<!-- Section -->
+		<section>
+			<header>
+				<h2>Get in touch</h2>
+			</header>
+			<div class="content">
+				<ul class="items">
+					<li>
+						<h3>Email</h3>
+						<a href="mailto:kingk22.xyz@respectmyprivacy.com">kingk22.xyz@respectmyprivacy.com</a>
+					</li>
+					<li>
+						<form method="post" action="https://formspree.io/kingk22.xyz@respectmyprivacy.com">
+							<div class="fields">
+								<div class="field half">
+									<input class="form" type="text" name="name" id="name" placeholder="Name" />
+								</div>
+								<div class="field half">
+									<input class="form" type="email" name="email" id="email" placeholder="Email" />
+								</div>
+								<div class="field">
+									<textarea class="form" name="message" id="message" placeholder="Message" rows="7"></textarea>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><input class="form" type="submit" value="Send Message" class="button primary" />
+								</li>
+							</ul>
+						</form>
 
-            <!-- Work -->
-            <article id="work">
-                <h2 class="major">Work</h2>
-                <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+					</li>
+					<li>
+						<a href="https://github.com/jibreil/" class="icon fa-github"><span
+								class="label">GitHub</span></a>
+					</li>
+				</ul>
+			</div>
+		</section>
+	</div>
 
-                <h3><a href="https://www.heavenlydelightscatering.com.au/">Heavenly Delights Catering website</a></h3>
-                <p>
-                    I made a fairly simple website for Heavenly Delights Catering and look after most technical aspects of the business. <a href="https://jibreil.xyz/heavenlydelightscateringdev/">Dev site.</a>
-                </p>
-
-                <h3>Ricing (linux desktop art)</h3>
-                <p>
-                    Ricing refers to making visual customizations to a desktop. It comes from the practice of customizing slow cars to appear fast, also known as ricing. My latest rice and information about it can be found on my <a href="https://dotfiles.kingk22.xyz/">dotfiles page.</a>
-                </p>
-
-                <h3><a href="https://jibreil.xyz/start-tree/">Start-tree</a></h3>
-                <p>
-                    A browser startpage in a command line tree style with links and a search bar. <a href="https://github.com/jibreil/start-tree">Source.</a>
-                </p>
-
-                <h3><a href="https://github.com/jibreil/vnstat-alert/">vnStat Alert</a></h3>
-                <p>
-                    A python script to monitor data usage on a system/server, originally made to be used in a business environment, specific actions and/or an email alert can be set up to activate when the specified usage limit is reached.
-                </p>
-
-            </article>
-
-            <!-- Contact -->
-            <article id="contact">
-                <h2 class="major">Contact</h2>
-                <form method="post" action="https://formspree.io/jibreil.xyz@respectmyprivacy.com">
-                    <div class="field half first">
-                        <label for="name">Name</label>
-                        <input type="text" name="name" id="name" />
-                    </div>
-                    <div class="field half">
-                        <label for="email">Email</label>
-                        <input type="text" name="email" id="email" />
-                    </div>
-                    <div class="field">
-                        <label for="message">Message</label>
-                        <textarea name="message" id="message" rows="4"></textarea>
-                    </div>
-                    <ul class="actions">
-                        <li><input type="submit" value="Send Message" class="special" /></li>
-                        <li><input type="reset" value="Reset" /></li>
-                    </ul>
-                </form>
-                <a href="https://github.com/jibreil" class="icon fa-3x fa-github"><span class="label">GitHub</span></a>
-            </article>
-
-        </div>
-
-        <!-- Footer -->
-        <footer id="footer">
-            <p class="copyright">&copy; Jibreil.</p>
-        </footer>
-
-    </div>
-
-    <!-- BG -->
-    <div id="bg"></div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
 </body>
 
