--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 				<h2>About</h2>
 			</header>
 			<div class="content">
-				<p>I'm a university student from Australia with interests and
-					passions in all sorts of technology, photography and cars.</p>
+				<p>I'm a university student from Australia with interests in
+					technology, photography and cars.</p>
 
-				<p>I am currently studying a Bachelor of Science in information
-					Technology majoring in networking and cybersecurity.</p>
+				<p>I am currently studying a Bachelor of Science in Information
+					Technology, majoring in Networking and Cybersecurity.</p>
 
-				<p>I have done some professional web development as well as some
-					other IT portfolio but most of my skills have come from and are used
+				<p>I have done some professional web development as well as
+					other IT work but most of my skills have come from and are used
 					as a hobby.</p>
 			</div>
 		</section>
@@ -52,7 +52,7 @@
 				<h2>Portfolio</h2>
 			</header>
 			<div class="content">
-				<p>Here are some photos I've taken.</p>
+				<p>Here are some of my favourite photos that I've taken.</p>
 				<div class="gallery">
 					<a href="images/gallery/fulls/01.jpg" class="landscape"><img
 							src="images/gallery/thumbs/01.jpg" /></a>
