--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
 	<title>Kingk22</title>
+	<meta property="og:title" content="Kingk22" />
+	<meta property="og:description" content="Student. Photographer. IT Hobbyist." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://kingk22.xyz/" />
+	<meta property="og:image" content="https://kingk22.xyz/images/pika.png" />
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
